--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -25,8 +25,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/start.tscn", "res://scenes/hyrule.tscn", "res://scenes/phoenix.tscn", "res://scenes/slime.tscn", "res://door.tscn")
-current_scene="res://door.tscn"
+open_scenes=PackedStringArray("res://scenes/start.tscn", "res://scenes/hyrule.tscn")
+current_scene="res://scenes/hyrule.tscn"
 center_split_offset=-278
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
