--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/door.png")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/tileset_grounds.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -29,13 +29,13 @@ open_scenes=PackedStringArray("res://scenes/start.tscn", "res://scenes/hyrule.ts
 current_scene="res://scenes/hyrule.tscn"
 center_split_offset=-278
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=12
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/slime.gd"]
-selected_script="res://scripts/slime.gd"
+open_scripts=["res://scripts/phoenix.gd", "res://scripts/slime.gd", "res://scripts/start.gd"]
+selected_script="res://scripts/phoenix.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
