--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -25,12 +25,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/start.tscn", "res://scenes/hyrule.tscn", "res://scenes/phoenix.tscn", "res://scenes/slime.tscn")
-current_scene="res://scenes/slime.tscn"
+open_scenes=PackedStringArray("res://scenes/start.tscn", "res://scenes/hyrule.tscn")
+current_scene="res://scenes/start.tscn"
 center_split_offset=-278
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=4
 
 [ScriptEditor]
 
