--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,14 +28,14 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://scenes/start.tscn", "res://scenes/sword_cave.tscn", "res://scenes/hyrule.tscn")
 current_scene="res://scenes/hyrule.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
 selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/phoenix.gd"]
-selected_script="res://scripts/phoenix.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=70
 list_split_offset=0
