--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,4 +1,4 @@
-[res://scripts/phoenix.gd]
+[res://scripts/door.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -6,8 +6,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 16.0,
+"row": 13,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
