--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,16 +17,16 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/hyrule.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/sword_cave.tscn", "res://scenes/phoenix.tscn")
-current_scene="res://scenes/sword_cave.tscn"
+open_scenes=PackedStringArray("res://scenes/sword_cave.tscn", "res://scenes/phoenix.tscn", "res://scenes/door.tscn", "res://scenes/hyrule.tscn")
+current_scene="res://scenes/hyrule.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
