--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://global.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://export_presets.cfg")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,17 +25,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/sword_cave.tscn", "res://scenes/phoenix.tscn", "res://scenes/door.tscn", "res://scenes/hyrule.tscn")
+open_scenes=PackedStringArray("res://scenes/sword_cave.tscn")
 current_scene="res://scenes/sword_cave.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://scripts/door.gd", "res://global.gd", "res://scripts/phoenix.gd", "res://scenes/sword_item.gd"]
+selected_script="res://scripts/phoenix.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
