--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -19,7 +19,7 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 1,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 11,
 "row": 17,
 "scroll_position": 0.0,
 "selection": false,
@@ -50,6 +50,20 @@ state={
 "h_scroll_position": 0,
 "row": 3,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/slime.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 7,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 48,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
