--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -25,20 +25,21 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/hyrule.tscn")
+open_scenes=PackedStringArray("res://scenes/hyrule.tscn", "res://scenes/slime.tscn")
 current_scene="res://scenes/hyrule.tscn"
-center_split_offset=-244
+center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=12
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/door.gd", "res://global.gd", "res://scripts/phoenix.gd", "res://scripts/slime.gd", "res://scenes/sword_item.gd"]
+open_scripts=["res://scripts/door.gd", "res://global.gd", "res://scripts/phoenix.gd", "res://save.gd", "res://scripts/slime.gd", "res://scenes/sword_item.gd"]
 selected_script="res://scripts/slime.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=1.14286
 
 [ShaderEditor]
 
