--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -26,11 +26,10 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/hyrule.tscn", "res://scenes/slime.tscn")
-current_scene="res://scenes/hyrule.tscn"
+current_scene="res://scenes/slime.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=12
 
 [ScriptEditor]
 
