--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,25 +17,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://save.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/tileset_grounds.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/hyrule.tscn")
+open_scenes=PackedStringArray("res://scenes/hyrule.tscn", "res://scenes/slime.tscn")
 current_scene="res://scenes/hyrule.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=12
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/bomb_item.gd", "res://scripts/door.gd", "res://global.gd", "res://scripts/green_ruppee.gd", "res://scripts/phoenix.gd", "res://save.gd", "res://scripts/slime.gd", "res://scenes/sword_item.gd"]
-selected_script="res://scripts/phoenix.gd"
+selected_script="res://scripts/slime.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
