--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -25,19 +25,19 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/hyrule.tscn", "res://scenes/slime.tscn")
-current_scene="res://scenes/hyrule.tscn"
-center_split_offset=-288
+open_scenes=PackedStringArray("res://scenes/hyrule.tscn", "res://scenes/slime.tscn", "res://scenes/boko.tscn")
+current_scene="res://scenes/boko.tscn"
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/bomb_item.gd", "res://scripts/door.gd", "res://global.gd", "res://scripts/green_ruppee.gd", "res://scripts/phoenix.gd", "res://save.gd", "res://scripts/slime.gd", "res://scenes/sword_item.gd"]
-selected_script="res://scripts/slime.gd"
+open_scripts=["res://scripts/boko.gd", "res://scripts/bomb_item.gd", "res://scripts/door.gd", "res://global.gd", "res://scripts/green_ruppee.gd", "res://scripts/phoenix.gd", "res://save.gd", "res://scripts/slime.gd", "res://scenes/sword_item.gd"]
+selected_script="res://scripts/boko.gd"
 open_help=[]
-script_split_offset=70
+script_split_offset=150
 list_split_offset=0
 zoom_factor=1.14286
 
