--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -63,12 +63,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
-"folded_lines": Array[int]([11, 15, 19, 26, 32, 35]),
+"column": 0,
+"folded_lines": Array[int]([12, 16, 20, 27, 33, 36, 39, 48]),
 "h_scroll_position": 0,
-"row": 46,
+"row": 58,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 58,
 "syntax_highlighter": "GDScript"
 }
 
@@ -110,6 +114,20 @@ state={
 "h_scroll_position": 0,
 "row": 10,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/boko.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 11,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 49,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
