--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,15 +17,15 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/yellow_squirrel.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/slime.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/hyrule.tscn", "res://scenes/slime.tscn", "res://scenes/boko.tscn")
+open_scenes=PackedStringArray("res://scenes/hyrule.tscn", "res://scenes/slime.tscn", "res://scenes/boko.tscn", "res://scenes/phoenix.tscn")
 current_scene="res://scenes/boko.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
