--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
-"folded_lines": Array[int]([10, 13, 16, 24, 26, 63, 66, 98, 100]),
+"column": 18,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
-"scroll_position": 0.0,
+"row": 59,
+"scroll_position": 53.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,16 +63,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([12, 16, 20, 27, 33, 36, 39, 48]),
+"column": 11,
+"folded_lines": Array[int]([12, 16, 20, 27, 32, 35, 38, 47, 49]),
 "h_scroll_position": 0,
-"row": 58,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 58,
+"row": 10,
+"scroll_position": 8.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -127,7 +123,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 49,
-"scroll_position": 12.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
