--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -63,10 +63,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 11,
-"folded_lines": Array[int]([12, 16, 20, 27, 32, 35, 38, 47, 49]),
+"column": 0,
+"folded_lines": Array[int]([12, 16, 27, 32, 35, 38, 47, 49]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 21,
 "scroll_position": 8.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -119,11 +119,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 11,
+"column": 50,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 49,
-"scroll_position": 0.0,
+"row": 51,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
