to many changes :skull:

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -3,5 +3,5 @@ list=Array[Dictionary]([{
 "class": &"SaveData",
 "icon": "",
 "language": &"GDScript",
-"path": "res://save.gd"
+"path": "res://scripts/save.gd"
 }])
