--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/slime.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/green_ruppee.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,8 +25,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/hyrule.tscn", "res://scenes/slime.tscn", "res://scenes/boko.tscn", "res://scenes/phoenix.tscn")
-current_scene="res://scenes/boko.tscn"
+open_scenes=PackedStringArray("res://scenes/hyrule.tscn", "res://scenes/slime.tscn", "res://scenes/boko.tscn", "res://scenes/phoenix.tscn", "res://scenes/chest.tscn", "res://scenes/green_ruppee.tscn")
+current_scene="res://scenes/chest.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/boko.gd", "res://scripts/bomb_item.gd", "res://scripts/door.gd", "res://global.gd", "res://scripts/green_ruppee.gd", "res://scripts/phoenix.gd", "res://save.gd", "res://scripts/slime.gd", "res://scenes/sword_item.gd"]
-selected_script="res://scripts/boko.gd"
+open_scripts=["res://scripts/boko.gd", "res://scripts/bomb_item.gd", "res://scripts/chest.gd", "res://scripts/door.gd", "res://scripts/global.gd", "res://scripts/green_ruppee.gd", "res://scripts/phoenix.gd", "res://scripts/save.gd", "res://scripts/slime.gd", "res://scenes/sword_item.gd"]
+selected_script="res://scripts/chest.gd"
 open_help=["CharacterBody2D"]
 script_split_offset=150
 list_split_offset=0
