--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,25 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 59,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://global.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 26,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 1,
-"scroll_position": 0.0,
+"row": 27,
+"scroll_position": 18.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,29 +49,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
-"folded_lines": Array[int]([16, 20, 27, 32, 35, 38, 47, 49]),
+"column": 0,
+"folded_lines": Array[int]([12, 16, 20, 27, 32, 35, 38, 47, 49]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 9.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 13,
-"selection_to_column": 29,
-"selection_to_line": 15,
-"syntax_highlighter": "GDScript"
-}
-
-[res://save.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 23,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 3,
-"scroll_position": 0.0,
+"row": 53,
+"scroll_position": 8.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -123,10 +91,52 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 29,
+"folded_lines": Array[int]([24, 28, 35, 43, 55]),
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 6.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/chest.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 11,
+"scroll_position": 6.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/save.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 23,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/global.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 26,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 1,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
