--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/slime.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/sfx/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/save.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/sfx/")
 dock_6_selected_tab_idx=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,15 +28,16 @@ dock_6="RidiculousCodingDock"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/hyrule.tscn", "res://scenes/bomb_cave.tscn", "res://scenes/phoenix.tscn", "res://scenes/slime.tscn", "res://scenes/sign.tscn")
-current_scene="res://scenes/sign.tscn"
+current_scene="res://scenes/hyrule.tscn"
 center_split_offset=-270
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/blue_ruppee.gd", "res://scripts/boko.gd", "res://scripts/bomb_item.gd", "res://scripts/chest.gd", "res://scripts/door.gd", "res://scripts/global.gd", "res://scripts/gold_ruppee.gd", "res://scripts/green_ruppee.gd", "res://scripts/phoenix.gd", "res://scripts/purple_ruppee.gd", "res://scripts/red_ruppee.gd", "res://scripts/save.gd", "res://scenes/sign.gd", "res://scripts/slime.gd", "res://scenes/sword_item.gd"]
-selected_script="res://scenes/sign.gd"
+selected_script="res://scripts/boko.gd"
 open_help=["CharacterBody2D"]
 script_split_offset=150
 list_split_offset=0
