--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 32,
-"scroll_position": 0.0,
-"selection": false,
+"row": 24,
+"scroll_position": 13.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 22,
+"selection_to_column": 36,
+"selection_to_line": 24,
 "syntax_highlighter": "GDScript"
 }
 
@@ -17,11 +21,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
-"folded_lines": Array[int]([11, 13, 15, 23]),
+"column": 2,
+"folded_lines": Array[int]([11, 13, 26]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
+"row": 121,
+"scroll_position": 108.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -53,7 +57,7 @@ state={
 "folded_lines": Array[int]([12, 21, 28, 33, 36, 39, 48, 50]),
 "h_scroll_position": 0,
 "row": 19,
-"scroll_position": 4.0,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -93,9 +97,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 9,
 "folded_lines": Array[int]([24, 28, 35, 43, 55]),
-"h_scroll_position": 0,
+"h_scroll_position": 153,
 "row": 14,
-"scroll_position": 14.0,
+"scroll_position": 23.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -133,10 +137,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 1,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -216,6 +220,20 @@ state={
 "h_scroll_position": 0,
 "row": 9,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/death_screen.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 24,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 12,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
