--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,7 +27,7 @@ dock_6="RidiculousCodingDock"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/hyrule.tscn", "res://scenes/sign.tscn", "res://scenes/death_screen.tscn", "res://scenes/phoenix.tscn")
+open_scenes=PackedStringArray("res://scenes/hyrule.tscn", "res://scenes/phoenix.tscn")
 current_scene="res://scenes/phoenix.tscn"
 center_split_offset=-270
 selected_default_debugger_tab_idx=0
