lots of cool changes

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,28 @@
 list=Array[Dictionary]([{
+"base": &"Control",
+"class": &"AssetButton",
+"icon": "",
+"language": &"GDScript",
+"path": "res://addons/asset_dock/asset_button.gd"
+}, {
+"base": &"EditorPlugin",
+"class": &"AssetDock",
+"icon": "",
+"language": &"GDScript",
+"path": "res://addons/asset_dock/asset_dock.gd"
+}, {
+"base": &"Control",
+"class": &"AssetDockGrid",
+"icon": "",
+"language": &"GDScript",
+"path": "res://addons/asset_dock/asset_dock_grid.gd"
+}, {
+"base": &"Resource",
+"class": &"AssetDockSettings",
+"icon": "",
+"language": &"GDScript",
+"path": "res://addons/asset_dock/settings.gd"
+}, {
 "base": &"Node2D",
 "class": &"RcBlip",
 "icon": "",
