--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -30,34 +30,16 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://scenes/sword_item.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 10,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 1,
-"selection_to_column": 0,
-"selection_to_line": 10,
-"syntax_highlighter": "GDScript"
-}
-
 [res://scripts/slime.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
-"folded_lines": Array[int]([12, 16, 36, 41, 44, 47, 56, 58]),
-"h_scroll_position": 0,
-"row": 32,
-"scroll_position": 22.0,
+"column": 8,
+"folded_lines": Array[int]([12, 16, 41, 46, 49, 52, 61, 63]),
+"h_scroll_position": 54,
+"row": 39,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -123,10 +105,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -210,20 +192,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://scenes/sign.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 7,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 9,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://scripts/death_screen.gd]
 
 state={
@@ -247,6 +215,52 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 6,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/sign.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 6,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
+"scroll_position": 3.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/sword_item.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 1,
+"selection_to_column": 0,
+"selection_to_line": 10,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/hyrule.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 34,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
