--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,17 +27,17 @@ dock_6="RidiculousCodingDock"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/start.tscn", "res://scenes/hyrule.tscn", "res://scenes/phoenix.tscn", "res://scenes/death_screen.tscn", "res://scenes/sword_cave.tscn", "res://scenes/door.tscn")
-current_scene="res://scenes/sword_cave.tscn"
+open_scenes=PackedStringArray("res://scenes/start.tscn", "res://scenes/hyrule.tscn", "res://scenes/phoenix.tscn", "res://scenes/death_screen.tscn", "res://scenes/sword_cave.tscn", "res://scenes/door.tscn", "res://scenes/swimmable_water.tscn")
+current_scene="res://scenes/swimmable_water.tscn"
 center_split_offset=-270
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=14
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/blue_ruppee.gd", "res://scripts/boko.gd", "res://scripts/bomb_item.gd", "res://scripts/chest.gd", "res://scripts/death_screen.gd", "res://scripts/door.gd", "res://scripts/global.gd", "res://scripts/gold_ruppee.gd", "res://scripts/green_ruppee.gd", "res://scripts/heart.gd", "res://scripts/hyrule.gd", "res://scripts/phoenix.gd", "res://scripts/purple_ruppee.gd", "res://scripts/red_ruppee.gd", "res://scripts/save.gd", "res://scripts/sign.gd", "res://scripts/slime.gd", "res://scripts/start.gd", "res://scripts/sword_item.gd"]
-selected_script="res://scripts/door.gd"
+selected_script="res://scripts/hyrule.gd"
 open_help=["CharacterBody2D"]
 script_split_offset=150
 list_split_offset=0
