--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 19.0,
-"selection": false,
+"row": 10,
+"scroll_position": 1.0,
+"selection": true,
+"selection_from_column": 16,
+"selection_from_line": 10,
+"selection_to_column": 25,
+"selection_to_line": 10,
 "syntax_highlighter": "GDScript"
 }
 
@@ -31,11 +35,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
-"folded_lines": Array[int]([12, 16, 41, 46, 49, 52, 61, 63]),
-"h_scroll_position": 54,
-"row": 39,
-"scroll_position": 13.0,
+"column": 0,
+"folded_lines": Array[int]([12, 16, 21, 41, 46, 49, 52, 61, 63]),
+"h_scroll_position": 0,
+"row": 67,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -253,10 +257,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 41,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 4,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
