getting bombs almost finished

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 2,
 "folded_lines": Array[int]([13, 15, 26, 129]),
 "h_scroll_position": 0,
 "row": 136,
-"scroll_position": 110.0,
+"scroll_position": 101.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -32,10 +32,10 @@ state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 0,
-"folded_lines": Array[int]([12, 16, 21, 41, 46, 49, 52, 61, 63]),
+"folded_lines": Array[int]([12, 17, 22, 26, 31, 34, 37, 47, 49, 53]),
 "h_scroll_position": 0,
-"row": 67,
-"scroll_position": 0.0,
+"row": 69,
+"scroll_position": 8.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -253,10 +253,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -281,16 +281,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
-"scroll_position": 6.0,
-"selection": true,
-"selection_from_column": 3,
-"selection_from_line": 7,
-"selection_to_column": 27,
-"selection_to_line": 7,
+"row": 9,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -299,11 +295,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 18.0,
+"row": 0,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
