--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/boko.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://assets/misc/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/entitys/bomb.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/entitys/", "res://assets/misc/")
 dock_6_selected_tab_idx=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,17 +27,17 @@ dock_6="RidiculousCodingDock"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/maps/hyrule.tscn", "res://scenes/areas/moss.tscn")
+open_scenes=PackedStringArray("res://scenes/maps/hyrule.tscn")
 current_scene="res://scenes/maps/hyrule.tscn"
 center_split_offset=-270
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://scripts/boko.gd", "res://scripts/bomb.gd", "res://scripts/hyrule.gd", "res://scripts/moss.gd"]
+selected_script="res://scripts/moss.gd"
 open_help=[]
 script_split_offset=150
 list_split_offset=0
@@ -49,3 +49,13 @@ open_shaders=[]
 split_offset=0
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
