ayyyyyyyyyyy fullyadd bombs baby les go

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/entitys/bomb.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/entitys/", "res://assets/misc/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/bomb_item.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/misc/")
 dock_6_selected_tab_idx=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,17 +27,17 @@ dock_6="RidiculousCodingDock"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/maps/hyrule.tscn")
-current_scene="res://scenes/maps/hyrule.tscn"
+open_scenes=PackedStringArray("res://scenes/maps/hyrule.tscn", "res://scenes/entitys/phoenix.tscn")
+current_scene="res://scenes/entitys/phoenix.tscn"
 center_split_offset=-270
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/boko.gd", "res://scripts/bomb.gd", "res://scripts/hyrule.gd", "res://scripts/moss.gd"]
-selected_script="res://scripts/moss.gd"
+open_scripts=["res://scripts/blue_ruppee.gd", "res://scripts/boko.gd", "res://scripts/bomb.gd", "res://scripts/bomb_item.gd", "res://addons/ridiculous_coding/resources/effects/boom.gd", "res://scripts/chest.gd", "res://scripts/death_screen.gd", "res://scripts/hyrule.gd", "res://scripts/moss.gd", "res://scripts/phoenix.gd", "res://scripts/save.gd"]
+selected_script="res://scripts/phoenix.gd"
 open_help=[]
 script_split_offset=150
 list_split_offset=0
@@ -58,4 +58,4 @@ log_filter_1=true
 log_filter_3=true
 log_filter_4=true
 collapse=false
-show_search=true
+show_search=false
