--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -27,17 +27,17 @@ dock_6="RidiculousCodingDock"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/maps/hyrule.tscn", "res://scenes/entitys/phoenix.tscn")
-current_scene="res://scenes/entitys/phoenix.tscn"
+open_scenes=PackedStringArray("res://scenes/maps/hyrule.tscn", "res://scenes/entitys/phoenix.tscn", "res://scenes/maps/boss_cave_1.tscn", "res://scenes/areas/shop.tscn")
+current_scene="res://scenes/areas/shop.tscn"
 center_split_offset=-270
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/blue_ruppee.gd", "res://scripts/boko.gd", "res://scripts/bomb.gd", "res://scripts/bomb_item.gd", "res://addons/ridiculous_coding/resources/effects/boom.gd", "res://scripts/chest.gd", "res://scripts/death_screen.gd", "res://scripts/hyrule.gd", "res://scripts/moss.gd", "res://scripts/phoenix.gd", "res://scripts/save.gd"]
-selected_script="res://scripts/phoenix.gd"
+open_scripts=["res://scripts/blue_ruppee.gd", "res://scripts/boko.gd", "res://scripts/bomb.gd", "res://scripts/bomb_item.gd", "res://addons/ridiculous_coding/resources/effects/boom.gd", "res://scripts/chest.gd", "res://scripts/death_screen.gd", "res://scripts/door.gd", "res://scripts/hyrule.gd", "res://scripts/moss.gd", "res://scripts/phoenix.gd", "res://scripts/save.gd", "res://scripts/shop.gd"]
+selected_script="res://scripts/shop.gd"
 open_help=[]
 script_split_offset=150
 list_split_offset=0
